feat: add possibility to validate projects

--- a/chrome-extension/manifest.json
+++ b/chrome-extension/manifest.json
@@ -18,7 +18,8 @@
     },
     "permissions": [
         "tabs",
-        "scripting"
+        "scripting",
+        "storage"
     ],
     "host_permissions": [
         "https://stepik.org/",
