feat: update firefox extension to 0.3 version

--- a/firefox-extension/manifest.json
+++ b/firefox-extension/manifest.json
@@ -18,7 +18,8 @@
     "permissions": [
         "*://stepik.org/*",
         "*://hyperskill.org/*",
-        "activeTab"
+        "activeTab",
+        "storage"
     ],
-    "version": "0.2"
+    "version": "0.3"
 }
